--- a/template/password_reset.html
+++ b/template/password_reset.html
@@ -19,7 +19,7 @@ body{
 	align-items: center;
 	-webkit-box-pack: center;
 	justify-content: center;
-	background-color:aquamarine;
+	background-color:#009688;
 }
 
 form{
@@ -52,13 +52,13 @@ span{
 <body>
     <div class="card login-form">
         <div class="card-body">
-            <h3 class="card-title text-center">Reset password</h3>
+            <h3 class="card-title text-center" style="color: seashell;">Reset password</h3>
             
             <div class="card-text">
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Enter your email address and we will send you a link to reset your password.</label>
+                    <label for="exampleInputEmail1" style="color: seashell;">Enter your email address and we will send you a link to reset your password.</label>
                 </div>
-                <form method="post">
+                <form method="post" style="color: seashell;">
                    
                     {%csrf_token%}
                     {{form}}
