--- a/template/guide.html
+++ b/template/guide.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guide</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
- 
+    
   </head>
   <style>
     body {
@@ -22,8 +21,8 @@
       );
       background: radial-gradient(
         ellipse farthest-corner at center top,
-        #446cb3 0%,
-        #22313f 100%
+        #009688 0%,
+        #009688 100%
       );
       color: #fff;
       font-family: "Open Sans", sans-serif;
@@ -102,7 +101,7 @@
 
     .info-desc {
       font-weight: 700;
-      font-size: 15px;
+      font-size: 28px;
     }
 
     .main-wrapper {
@@ -123,9 +122,9 @@
       min-width: 260px;
       height: 60px;
       margin-top: 10px;
-      background: -webkit-linear-gradient(top, #3a404d, #181c26);
-      background: linear-gradient(to bottom, #3a404d, #181c26);
-      border-radius: 10px;
+      background: -webkit-linear-gradient(top, #009688, #009688);
+      background: linear-gradient(to bottom, #009688, #009688);
+      border-radius: 15px;
       box-shadow: 0 7px 30px rgba(62, 9, 11, 0.3);
     }
 
@@ -144,20 +143,20 @@
 
     .menu-item:nth-child(4) {
       border-radius: 0 0 10px 10px;
-      background: #3d61a1;
+      background: #009688;
     }
 
     .menu-item:nth-child(3) {
-      background: #36568f;
+      background: #009688;
     }
 
     .menu-item:nth-child(2) {
-      background: #2f4b7d;
+      background: #009688;
     }
 
     .menu-item:nth-child(1) {
       border-radius: 10px 10px 0 0;
-      background: #28406b;
+      background: #009688;
     }
 
     .menu-item:hover {
@@ -185,11 +184,11 @@
     }
 
     .menu-item-number:nth-child(1) {
-      color: #28406b;
+      color: #009688;
     }
 
     .menu-item-number:nth-child(2) {
-      color: #2f4b7d;
+      color: #009688;
     }
 
     .menu-item-number:nth-child(3) {
@@ -210,6 +209,9 @@
       margin-left: 20px;
       display: flex;
       flex-wrap: wrap;
+      /* border-radius: 5px;
+      border-color: black; 
+      border-width: 3px;  */
     }
 
     .shop-card {
@@ -218,10 +220,13 @@
       height: 270px;
       background: #f5f5f5;
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-      border-radius: 5px;
+      border-radius:15px;
+      border-color: black;
+      border-style: solid;
       padding: 20px;
       text-align: center;
       font-family: "Open Sans Condensed", sans-serif;
+      /* border-radius: 5px; border-color: black; border-width: 3px;  */
     }
 
     .shop-card .title {
@@ -255,7 +260,7 @@
     }
 
     .price {
-      color: #28406b;
+      color: #009688;
       font-size: 22px;
       font-weight: 900;
       transition: color 0.3s ease-in-out;
@@ -265,7 +270,7 @@
       font-size: 13px;
       font-weight: 900;
       text-transform: uppercase;
-      color: #28406b;
+      color: #009688;
       padding: 12px 18px;
       cursor: pointer;
       transition: all 300ms;
@@ -273,7 +278,7 @@
       border: none;
       background: none;
       outline: none;
-      border: 1px solid #28406b;
+      border: 1px solid #009688;
       border-radius: 20px;
     }
 
@@ -290,7 +295,7 @@
     }
 
     .button:hover {
-      background: linear-gradient(135deg, #3d61a1, #28406b);
+      background: linear-gradient(135deg, #009688, #009688);
       color: #fff;
       border: none;
     }
@@ -359,12 +364,7 @@
           </form>
         </div>
       </div>
-      <!-- <div class="cart-container">
-        <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-        <div class="cart-desc">0 items</div>
-      </div> -->
     </div>
-
     <!-- INFO BAR -->
     <div class="info-wrapper">
       <div class="shipping-container">
@@ -380,13 +380,13 @@
     <!-- MAIN WRAPPER -->
     <div class="main-wrapper">
       <div class="menu">
-        <div class="menu-item Amazon" style="height : 60px">
+        <div class="menu-item Amazon" style="height : 60px;" >
           <div class="menu-item-title">Guide</div>
           <div class="menu-item-number">{{g | length}}</div>
         </div>
       </div>
 
-      <div class="products-container">
+      <div class="products-container" >
         {% for gi in g %}
         <div class="shop-card" data-cat="Amazon">
           <div class="title">{{gi.username}}</div>
@@ -397,9 +397,7 @@
           </div>
           <div class="cta">
             <span class="price" >&#9733;{{gi.review}}/5.0</span>
-            <!-- <div class="price" style="position:relative; ">&#x20B9;{{gi.charges}}/day</div> -->
             <span class="price" style="position:relative; right:95px; top:23px;">&#x20B9;{{gi.charges}}/day</span>
-            <!-- <button class="button"onclick="document.location='viewprofile'">View</button> -->
             <a href="/viewprofile/{{gi.id}}" class="button" style="position:relative;right:30px;">View</a>
           </div>
         </div>
