--- a/template/password_reset_done.html
+++ b/template/password_reset_done.html
@@ -18,7 +18,8 @@ body{
 	align-items: center;
 	-webkit-box-pack: center;
 	justify-content: center;
-	background-color:aquamarine;
+	background-color:#009688;
+	color: seashell;
 }
 
 form{
