--- a/template/signup.html
+++ b/template/signup.html
@@ -155,13 +155,15 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required />
 
-        <label for="password">Phone number:</label>
-        <input type="nummber" id="password" name="phnum" required />
+        <!-- <label for="phone number">Phone number:</label>
+        <input type="nummber" id="password" name="phnum" required /> -->
+        <label for="phone number">Phone Number:</label>
+        <input type="number" id="password" name="phnum" />
 
-        <label for="password">Location:</label>
+        <label for="location">Location:</label>
         <input type="text" id="password" name="location" required />
 
-        <label for="password">zipcode:</label>
+        <label for="zincode">Zipcode:</label>
         <input type="number" id="password" name="zipcode" />
       </fieldset>
 
@@ -177,7 +179,8 @@
       </fieldset>
       <label for="img">Select image:</label>
       <input type="file" id="img" name="img" accept="image/*" />
-
+      <br>
+      <br>
       <button type="submit">Sign Up</button>
     </form>
   </body>
