--- a/template/dashboard.html
+++ b/template/dashboard.html
@@ -105,7 +105,7 @@ table {
  @import url('https://fonts.googleapis.com/css?family=Heebo:400,700|Open+Sans:400,700');
 
 :root {
-  --color: #3c3163;
+  --color:#009688;
   --transition-time: 0.5s;
 }
 
@@ -181,7 +181,7 @@ a {
 
 .card .tags .tag {
   font-size: 0.75em;
-  background: rgba(255,255,255,0.5);
+  background: #009688;
   border-radius: 0.3rem;
   padding: 0 0.5em;
   margin-right: 0.5em;
@@ -409,7 +409,7 @@ $(document).ready(function(){
             <aside class="right-side">
               <section class="cards-wrapper">
                 <div class="card-grid-space">
-                  <div class="num">01</div>
+                  <div class="num" style="color: white;">01</div>
                   <a class="card" href="/photographer" style="--bg-img: url(https://miro.medium.com/max/7000/1*l-mjZ0Ym-VzDSrSW6nvfqA.jpeg)">
                     <div>
                       <h1>PHOTOGRAPHER</h1>
@@ -422,7 +422,7 @@ $(document).ready(function(){
                   </a>
                 </div>
                 <div class="card-grid-space">
-                  <div class="num">02</div>
+                  <div class="num" style="color: white;">02</div>
                   <a class="card" href="/guide" style="--bg-img: url('https://blog.myproguide.com/wp-content/uploads/2019/09/MPG-operator-tour-guide-200x200.png')">
                     <div>
                       <h1>GUIDE</h1>
