--- a/template/viewprofile.html
+++ b/template/viewprofile.html
@@ -544,7 +544,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
             </h1>
             <br>
             <!-- <button class="btn profile-edit-btn"> -->
-            <button class="btn profile-edit-btn" style="color: seashell; background-color: seashell;">
+            <button class="btn profile-edit-btn" style="color: white; background-color: white;">
               <a href="order/{{user.id}}" style="color: #009688;"> Order</a>
             </button>
             
@@ -588,7 +588,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
                   {% for u in u %}
                       <div class="col-md-6">
                               <div class="card" onclick="showdesc('{{u.description}}')" style="border-radius: 5px; border-color:white; border-width: 3px;">
-                                  <img src="{{u.img.url}}" class="card-img-top" style="height:240px; border:red;">
+                                  <img src="{{u.img.url}}" class="card-img-top" style="height:240px; ">
                               </div>
                       </div>  
                   {%endfor%}                  
