--- a/template/dashboard.html
+++ b/template/dashboard.html
@@ -309,6 +309,8 @@ a {
   font-size: 16px;
 }
 </style>
+<style>
+</style>
 <script>
     /* JS needed only for demo */
 
@@ -359,7 +361,7 @@ $(document).ready(function(){
 });
 })
 </script>
-<body style="background-color: #009688;">
+<body scroll="no" style="background-color: #009688;overflow: hidden;">
     <!-- <button class="btn-nav">
         <div class="bar arrow-top-r"></div>
         <div class="bar arrow-middle-r"></div>
@@ -397,16 +399,8 @@ $(document).ready(function(){
         <!-- <aside class="left-side hidden hideNav"> -->
          </ul>
         </aside>
-            <!-- <section class="info">
-              <img src="/static/images/logo.jpg" alt="logo" style="width: 40px; height: 40px; margin-top: 3px; padding: auto;"/>
-               <p style="font-family:Cursive; color: floralwhite; margin-right:700px ; margin-right:10px ; padding: auto; margin-top:7px; font-size: 25px;">
-                 Smart Travel 
-                 <br> 
-                 <br>
-                 <br> What are you Looking for ??
-               </p>
-              </section> -->
-            <aside class="right-side">
+            
+            <aside class="right-side" >
               <section class="cards-wrapper">
                 <div class="card-grid-space">
                   <div class="num" style="color: white;">01</div>
