--- a/template/photographer.html
+++ b/template/photographer.html
@@ -48,6 +48,8 @@
 
     .logo {
       flex: 1;
+      font:caption;
+      font-size: 28px;
     }
 
     .cart-container {
@@ -337,6 +339,7 @@
   <body>
     <!-- NAVBAR -->
     <div class="navbar">
+      <img src="/static/images/logo.jpg" alt="logo" style="width: 40px; margin-top: 11px; padding: auto; margin-bottom: 11px;margin-right: 11px;"/>
       <div class="logo">Smart Travel</div>
       <i style="font-size:24px" class="fa">&#xf0b0;</i>
       <center>
