--- a/template/reviews.html
+++ b/template/reviews.html
@@ -14,7 +14,7 @@
     }
 
     body {
-      background-color: #fef9f2;
+      background-color:#009688;
       font-family: 'Montserrat', sans-serif;
       display: flex;
       align-items: center;
@@ -57,7 +57,8 @@
     .rating:hover,
     .rating.active {
       border-radius: 4px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+      box-shadow: 0 0 10px #009688;
     }
 
     .rating img {
@@ -72,11 +73,13 @@
 
     .rating:hover small,
     .rating.active small {
-      color: #111;
+      /* color: #111; */
+      color: #009688;
     }
 
     .btn {
-      background-color: #302d2b;
+      /* background-color: #302d2b; */
+      background-color: #009688;
       color: #fff;
       border: 0;
       border-radius: 4px;
