--- a/template/pdashboard.html
+++ b/template/pdashboard.html
@@ -576,7 +576,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
     </header>
     <main class="container">
       <button class="btn profile-edit-btn" style="color: white; background-color: white; margin-left:300px;">
-        <a href="addphoto/{{user.id}}" style="color: #009688;">Add Photoes</a>
+        <a href="addphoto/{{user.id}}" style="color: #009688;">Add Photos</a>
       </button>
       <!-- <a href="addphoto/{{user.id}}" class="btn profile-edit-btn" style = "margin-left:300px;"> ADD PHOTOS</a> -->
       <br>
