--- a/template/signup.html
+++ b/template/signup.html
@@ -131,7 +131,7 @@
       }
     }
   </style>
-  <body>
+  <body style="background-color: #009688;">
     <form action="signup" method="POST" enctype="multipart/form-data">
       {% csrf_token %}
 
