--- a/template/g_dashboard.html
+++ b/template/g_dashboard.html
@@ -593,7 +593,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
     </header>
       <main class="container">
         <button class="btn profile-edit-btn" style="color: white; background-color: white; margin-left:300px;">
-          <a href="addphoto/{{user.id}}" style="color: #009688;">Add Photoes</a>
+          <a href="addphoto/{{user.id}}" style="color: #009688;">Add Photos</a>
         </button>
         <br>
         <br>
